--- a/TCCMadeireira/Views/Relatorios/Reports/VendasReport.rdlc
+++ b/TCCMadeireira/Views/Relatorios/Reports/VendasReport.rdlc
@@ -217,11 +217,13 @@
                               <Value>=Fields!VALOR_PRODUTO.Value</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
+                                <Format>'R$'0.00</Format>
+                                <rd:FormatSymbolCulture>pt-BR</rd:FormatSymbolCulture>
                               </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Left</TextAlign>
+                            <TextAlign>Center</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -579,6 +581,8 @@
                                 <Value>=Fields!VALOR_VENDA.Value</Value>
                                 <Style>
                                   <FontWeight>Normal</FontWeight>
+                                  <Format>'R$'0.00</Format>
+                                  <rd:FormatSymbolCulture>pt-BR</rd:FormatSymbolCulture>
                                 </Style>
                               </TextRun>
                             </TextRuns>
@@ -627,6 +631,7 @@
                                     <Value>=Fields!DATA_VENDA.Value</Value>
                                     <Style>
                                       <FontWeight>Normal</FontWeight>
+                                      <Format>g</Format>
                                     </Style>
                                   </TextRun>
                                 </TextRuns>
@@ -821,9 +826,9 @@
           </Paragraphs>
           <rd:DefaultName>Textbox17</rd:DefaultName>
           <Top>0.70625cm</Top>
-          <Left>3.9cm</Left>
+          <Left>3.93528cm</Left>
           <Height>1.5cm</Height>
-          <Width>16.79214cm</Width>
+          <Width>16.75686cm</Width>
           <ZIndex>1</ZIndex>
           <Style>
             <Border>
