--- a/TCCMadeireira/Views/Relatorios/Reports/VendasReport.rdlc
+++ b/TCCMadeireira/Views/Relatorios/Reports/VendasReport.rdlc
@@ -203,6 +203,7 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -779,10 +780,10 @@
         </Style>
       </Tablix>
     </ReportItems>
-    <Height>18cm</Height>
+    <Height>150mm</Height>
     <Style />
   </Body>
-  <Width>27.7cm</Width>
+  <Width>297mm</Width>
   <Page>
     <PageHeader>
       <Height>4cm</Height>
@@ -929,14 +930,12 @@
         </Border>
       </Style>
     </PageFooter>
-    <PageHeight>21cm</PageHeight>
-    <PageWidth>29cm</PageWidth>
-    <InteractiveHeight>21cm</InteractiveHeight>
-    <InteractiveWidth>29cm</InteractiveWidth>
-    <LeftMargin>0cm</LeftMargin>
-    <RightMargin>0cm</RightMargin>
-    <TopMargin>0cm</TopMargin>
-    <BottomMargin>0cm</BottomMargin>
+    <PageHeight>29.7cm</PageHeight>
+    <PageWidth>21cm</PageWidth>
+    <LeftMargin>2cm</LeftMargin>
+    <RightMargin>2cm</RightMargin>
+    <TopMargin>2cm</TopMargin>
+    <BottomMargin>2cm</BottomMargin>
     <ColumnSpacing>0.13cm</ColumnSpacing>
     <Style />
   </Page>
